[tool.poetry]
name = "langchain-graphiti"
version = "0.1.0"
description = "LangChain integration for the Graphiti knowledge graph system."
authors = ["Mirza Bicer <mirzabicer.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_graphiti", from = "src"}]
homepage = "https://github.com/dev-mirzabicer/langchain_graphiti"
repository = "https://github.com/dev-mirzabicer/langchain_graphiti"
keywords = ["langchain", "graphiti", "knowledge graph", "retriever", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
 
 [tool.poetry.dependencies]
python = ">=3.10, <3.14"
langchain-core = "*"
graphiti-core = "*"
pydantic = "^2.0"
langsmith = "*"
anyio = "*"
nest-asyncio = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
langchain-tests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]